added the readme file

--- a/read_results.ipynb
+++ b/read_results.ipynb
@@ -46,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "176\n",
+      "400\n"
+     ]
+    }
+   ],
    "source": [
     "def read_result(experiment):\n",
     "    with open(f'{experiment}', 'rb') as f:\n",
@@ -61,7 +70,7 @@
     "    print(len(gt_labels))\n",
     "    return (pred_labels==gt_labels).sum()/len(gt_labels)\n",
     "\n",
-    "experiments = glob.glob(\"./Results_CTRGCN/*career_train*/eval*.pkl\")\n",
+    "experiments = glob.glob(\"./Results_CTRGCN/*val_*test_*/eval*.pkl\")\n",
     "results_dict = {}\n",
     "for experiment in experiments:\n",
     "    res = read_result(experiment)\n",
@@ -70,16 +79,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{}"
+       "{'./Results_CTRGCN\\\\ctrgcn_infact_plus_2d_primitive_val_youtube_test_D01_D02\\\\eval_test.pkl': '57.39',\n",
+       " './Results_CTRGCN\\\\ctrgcn_infact_plus_2d_primitive_val_youtube_test_D01_D02\\\\eval_val.pkl': '55.25'}"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
