Added several scheduler functions to training_utils

--- a/CAREER_one_out_experiments.ipynb
+++ b/CAREER_one_out_experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,18 +16,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
    "source": [
     "#load infant dataset\n",
-    "with open(\"./Data/new_InfAct_plus_2d.pkl\", \"rb\") as f:\n",
+    "with open(\"Data\\InfAct_plus\\InfAct_plus_2d_yolo.pkl\", \"rb\") as f:\n",
     "    ds = pickle.load(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1127"
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(ds['annotations'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +65,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{tabular}{lrrrrrrrr}\n",
+      "\\toprule\n",
+      " & youtube & CAREER_D01 & CAREER_D05 & CAREER_D08 & CAREER_D09 & CAREER_D02 & CAREER_D03 & CAREER_D10 \\\\\n",
+      "\\midrule\n",
+      "Prone & 74 & 75 & 45 & 30 & 28 & 1 & 3 & 40 \\\\\n",
+      "All-fours & 69 & 0 & 0 & 0 & 0 & 18 & 47 & 78 \\\\\n",
+      "Standing & 79 & 0 & 0 & 0 & 0 & 15 & 22 & 0 \\\\\n",
+      "Supine & 62 & 23 & 0 & 0 & 45 & 0 & 0 & 9 \\\\\n",
+      "Sitting & 116 & 0 & 0 & 0 & 0 & 21 & 126 & 101 \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_acts_per_sub_dict = pd.DataFrame.from_dict(num_acts_per_sub)\n",
+    "num_acts_per_sub_dict.fillna(0, inplace=True)\n",
+    "print(num_acts_per_sub_dict.astype(int).to_latex())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -69,106 +119,175 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>youtube</th>\n",
-       "      <th>CAREER_D01</th>\n",
-       "      <th>CAREER_D05</th>\n",
-       "      <th>CAREER_D08</th>\n",
-       "      <th>CAREER_D09</th>\n",
-       "      <th>CAREER_D02</th>\n",
-       "      <th>CAREER_D03</th>\n",
-       "      <th>CAREER_D10</th>\n",
+       "      <th>Prone</th>\n",
+       "      <th>All-fours</th>\n",
+       "      <th>Standing</th>\n",
+       "      <th>Supine</th>\n",
+       "      <th>Sitting</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>Prone</th>\n",
+       "      <th>youtube</th>\n",
        "      <td>74</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>44.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>All-fours</th>\n",
        "      <td>69</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>22</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>81.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Standing</th>\n",
        "      <td>79</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>21</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Supine</th>\n",
        "      <td>62</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>18.0</td>\n",
+       "      <td>116</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Sitting</th>\n",
-       "      <td>116</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>33</td>\n",
-       "      <td>138.0</td>\n",
-       "      <td>101.0</td>\n",
+       "      <th>CAREER</th>\n",
+       "      <td>222</td>\n",
+       "      <td>143</td>\n",
+       "      <td>37</td>\n",
+       "      <td>77</td>\n",
+       "      <td>248</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           youtube  CAREER_D01  CAREER_D05  CAREER_D08  CAREER_D09  \\\n",
-       "Prone           74        75.0        45.0        30.0        28.0   \n",
-       "All-fours       69         0.0         0.0         0.0         0.0   \n",
-       "Standing        79         0.0         0.0         0.0         0.0   \n",
-       "Supine          62        23.0         0.0         0.0        45.0   \n",
-       "Sitting        116         0.0         0.0         0.0         0.0   \n",
-       "\n",
-       "           CAREER_D02  CAREER_D03  CAREER_D10  \n",
-       "Prone               1         6.0        44.0  \n",
-       "All-fours          22        70.0        81.0  \n",
-       "Standing           21        37.0         0.0  \n",
-       "Supine              1         0.0        18.0  \n",
-       "Sitting            33       138.0       101.0  "
+       "         Prone  All-fours  Standing  Supine  Sitting\n",
+       "youtube     74         69        79      62      116\n",
+       "CAREER     222        143        37      77      248"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "num_acts_per_sub = {}\n",
+    "for anno in ds['annotations']:\n",
+    "    source = anno['source'].split('_')[0]\n",
+    "    pos = anno['pos_label']\n",
+    "    if source not in num_acts_per_sub.keys():\n",
+    "        num_acts_per_sub[source] = {}\n",
+    "    if pos not in num_acts_per_sub[source].keys():\n",
+    "        num_acts_per_sub[source][pos] = 1\n",
+    "    else:\n",
+    "        num_acts_per_sub[source][pos]+=1\n",
+    "\n",
     "num_acts_per_sub_dict = pd.DataFrame.from_dict(num_acts_per_sub)\n",
     "num_acts_per_sub_dict.fillna(0, inplace=True)\n",
-    "num_acts_per_sub_dict"
+    "b = num_acts_per_sub_dict.T\n",
+    "b"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Prone</th>\n",
+       "      <th>All-fours</th>\n",
+       "      <th>Standing</th>\n",
+       "      <th>Supine</th>\n",
+       "      <th>Sitting</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>youtube</th>\n",
+       "      <td>74</td>\n",
+       "      <td>69</td>\n",
+       "      <td>79</td>\n",
+       "      <td>62</td>\n",
+       "      <td>116</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>CAREER</th>\n",
+       "      <td>222</td>\n",
+       "      <td>143</td>\n",
+       "      <td>37</td>\n",
+       "      <td>77</td>\n",
+       "      <td>248</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Prone  All-fours  Standing  Supine  Sitting\n",
+       "youtube     74         69        79      62      116\n",
+       "CAREER     222        143        37      77      248"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "152"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1127-975"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "12.375"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "198.0/16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,14 +314,14 @@
     "    train_splits = [item for item in non_youtube_ann if leave_out_sub not in item['source']]\n",
     "    val_splits   = [item for item in non_youtube_ann if leave_out_sub in item['source']]\n",
     "    assert len(yt_splits)==400\n",
-    "    assert len(train_splits)+len(val_splits)==819\n",
+    "    assert len(train_splits)+len(val_splits)==727\n",
     "\n",
     "    leave_out_ds = {\"split\": {\n",
     "        \"train\": [*list(map(get_frame_dirs, train_splits))],\n",
     "        \"val\": [*list(map(get_frame_dirs, val_splits))]\n",
     "    },\n",
     "    \"annotations\": [*train_splits, *val_splits]}\n",
-    "    assert len(leave_out_ds['annotations'])==819\n",
+    "    assert len(leave_out_ds['annotations'])==727\n",
     "    assert len(leave_out_ds['split']['train'])+len(leave_out_ds['split']['val'])==len(leave_out_ds['annotations'])\n",
     "\n",
     "    for item in leave_out_ds['split']['train']:\n",
@@ -217,13 +336,13 @@
     "        \"val\": [*list(map(get_frame_dirs, val_splits))]\n",
     "    },\n",
     "    \"annotations\": [*train_splits, *val_splits, *yt_splits]}\n",
-    "    assert len(leave_out_ds_with_yt['annotations'])==1219\n",
+    "    assert len(leave_out_ds_with_yt['annotations'])==1127\n",
     "    assert len(leave_out_ds_with_yt['split']['train'])+len(leave_out_ds_with_yt['split']['val'])==len(leave_out_ds_with_yt['annotations'])\n",
     "\n",
-    "    with open(f\"Data\\leave_out\\leave_out_{leave_out_sub}.pkl\", \"wb\") as f:\n",
+    "    with open(f\"Data\\career_leave_out\\leave_out_{leave_out_sub}.pkl\", \"wb\") as f:\n",
     "        pickle.dump(leave_out_ds, f)\n",
     "\n",
-    "    with open(f\"Data\\leave_out\\leave_out_{leave_out_sub}_with_youtube.pkl\", \"wb\") as f:\n",
+    "    with open(f\"Data\\career_leave_out\\leave_out_{leave_out_sub}_with_youtube.pkl\", \"wb\") as f:\n",
     "        pickle.dump(leave_out_ds_with_yt, f)"
    ]
   },
